test/bad/type_missmatch_16.mpp
fun bar(y:int):bool { return true; };

print bar(1.0);
